[package]
name = "ulid-rs-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ulid_rs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
ulid = "0.6.0"
rand = "0.8.5"
time = { version = "0.3" }
once_cell = "1.12.0"


[dev-dependencies]